<resources>
    <string name="app_name">RedGames</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="tittle_fotos">Fotos</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_programacao">Jogos</string>
    <string name="title_notifications">Notifications</string>
    <string name="equipe_names">Equipes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ranking">Ranking</string>
    <string name="vote">Vote</string>
</resources>
