<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_iconfinder_camera_126587"
        android:title="@string/tittle_fotos" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/games"
        android:title="@string/title_programacao" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_iconfinder_17_team_group_meeting_business_3964128"
        android:title="@string/equipe_names" />

    <item
        android:id="@+id/navigation_ranking"
        android:icon="@drawable/ic_iconfinder_trophy_309005"
        android:title="@string/ranking"

        />

    <item
        android:id="@+id/navigation_vote"
        android:icon="@drawable/vote"
        android:title="@string/vote" />

</menu>
